--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <version>3.5.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
