--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,9 @@ spring:
     url: jdbc:mysql://localhost:3306/db06
     username: root
     password: 123456
-
+  cache:
+    redis:
+      time-to-live: 1800000
   servlet:
     multipart:
       max-file-size: 10MB
